--- a/app/src/main/res/layout/activity_stock_view.xml
+++ b/app/src/main/res/layout/activity_stock_view.xml
@@ -6,13 +6,19 @@
     android:layout_height="match_parent"
     tools:context="presentation.StockViewActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/itemRV"
+        android:layout_width="599dp"
+        android:layout_height="860dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/StockViewText" />
+
     <TextView
         android:id="@+id/StockViewText"
         android:layout_width="584dp"
         android:layout_height="45dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="@string/stock_welcome_text"
         android:textAlignment="center"
         android:textSize="34sp"
