Edited theme to be a sexy dark mode

--- a/app/src/main/res/layout/activity_item_view.xml
+++ b/app/src/main/res/layout/activity_item_view.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:text="Description goes here"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -26,6 +27,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/itemStart"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +40,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/showAmount"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
