--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/welcome_text"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:onClick="addItemSwitch"
+        android:onClick="stockViewSwitch"
         android:text="@string/addItemView_button"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
