--- a/app/src/main/res/layout/activity_item_add.xml
+++ b/app/src/main/res/layout/activity_item_add.xml
@@ -13,11 +13,12 @@
         android:layout_marginTop="16dp"
         android:text="@string/addItemMsg"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="34sp"
-        tools:ignore="LabelFor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/inputName"
@@ -25,13 +26,14 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/nameText"
-        tools:ignore="LabelFor"
+        android:textColor="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addItemText"
-        android:importantForAutofill="no" />
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/inputAmount"
@@ -39,13 +41,14 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/amountText"
-        tools:ignore="LabelFor"
+        android:textColor="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputName"
-        android:importantForAutofill="no" />
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/inputQty"
@@ -53,13 +56,14 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/qtyText"
-        tools:ignore="LabelFor"
+        android:textColor="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputAmount"
-        android:importantForAutofill="no" />
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/inputDescription"
@@ -67,13 +71,14 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:text="@string/descriptionText"
-        tools:ignore="LabelFor"
+        android:textColor="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputQty"
-        android:importantForAutofill="no" />
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/itemCreate"
