--- a/app/src/main/res/layout/stock_item.xml
+++ b/app/src/main/res/layout/stock_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="24sp" />
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="24sp" />
 
     <TextView
@@ -30,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAlignment="center"
+        android:textColor="?attr/colorOnBackground"
         android:textSize="24sp" />
 
     <Button
