--- a/app/src/main/res/layout/activity_item_add.xml
+++ b/app/src/main/res/layout/activity_item_add.xml
@@ -41,14 +41,13 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:text="@string/amountText"
-        android:textColor="?attr/colorOnBackground"
+        android:textColor="@color/design_default_color_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputName"
-        tools:ignore="LabelFor" />
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/inputQty"
