Added dialog boxes so that stock can be added/removed for a specific item

--- a/app/src/main/res/layout/activity_item_add.xml
+++ b/app/src/main/res/layout/activity_item_add.xml
@@ -26,10 +26,11 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="@string/nameText"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="@string/nameText"
         android:textColor="?attr/colorOnBackground"
+        android:textColorHint="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addItemText"
@@ -41,13 +42,14 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="@string/amountText"
+        android:importantForAutofill="no"
         android:inputType="number"
-        android:text="@string/amountText"
         android:textColor="@color/design_default_color_background"
+        android:textColorHint="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputName"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toBottomOf="@+id/inputName" />
 
     <EditText
         android:id="@+id/inputQty"
@@ -55,10 +57,11 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="@string/qtyText"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="@string/qtyText"
         android:textColor="?attr/colorOnBackground"
+        android:textColorHint="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputAmount"
@@ -70,10 +73,11 @@
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="@string/descriptionText"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="@string/descriptionText"
         android:textColor="?attr/colorOnBackground"
+        android:textColorHint="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputQty"
