--- a/app/src/main/res/layout/activity_item_view.xml
+++ b/app/src/main/res/layout/activity_item_view.xml
@@ -48,9 +48,11 @@
 
     <Button
         android:id="@+id/AddStock"
-        android:layout_width="588dp"
+        android:layout_width="0dp"
         android:layout_height="85dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:onClick="addStock"
         android:text="@string/addStock"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +62,11 @@
 
     <Button
         android:id="@+id/RemoveStock"
-        android:layout_width="588dp"
+        android:layout_width="0dp"
         android:layout_height="85dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:onClick="removeStock"
         android:text="@string/delStock"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,9 +75,11 @@
 
     <Button
         android:id="@+id/DeleteItem"
-        android:layout_width="588dp"
+        android:layout_width="0dp"
         android:layout_height="85dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="#E40404"
         android:onClick="deleteItem"
         android:text="@string/DeleteItem"
