--- a/app/src/main/res/layout/activity_item_add.xml
+++ b/app/src/main/res/layout/activity_item_add.xml
@@ -8,9 +8,11 @@
 
     <TextView
         android:id="@+id/addItemText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/addItemMsg"
         android:textAlignment="center"
         android:textColor="?attr/colorOnBackground"
@@ -94,7 +96,7 @@
     <Button
         android:id="@+id/itemCreate"
         android:layout_width="0dp"
-        android:layout_height="66dp"
+        android:layout_height="85dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
