--- a/app/src/main/res/layout/activity_item_view.xml
+++ b/app/src/main/res/layout/activity_item_view.xml
@@ -22,9 +22,11 @@
 
     <TextView
         android:id="@+id/ItemWelcomeMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/itemStart"
         android:textAlignment="center"
         android:textColor="?attr/colorOnBackground"
@@ -35,7 +37,7 @@
 
     <TextView
         android:id="@+id/itemAmount"
-        android:layout_width="wrap_content"
+        android:layout_width="179dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/showAmount"
