--- a/app/src/main/res/layout/activity_stock_view.xml
+++ b/app/src/main/res/layout/activity_stock_view.xml
@@ -19,7 +19,9 @@
         android:id="@+id/StockViewText"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/stock_welcome_text"
         android:textAlignment="center"
         android:textColor="?attr/colorOnBackground"
