--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,48 +6,13 @@
     android:layout_height="match_parent"
     tools:context="presentation.MainActivity">
 
-    <TextView
-        android:id="@+id/WelcomeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/welcome_text"
-        android:textAlignment="center"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="34sp"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="448dp"
+        android:layout_height="208dp"
+        android:onClick="logInSwitch"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/ItemViewButton"
-        android:layout_width="0dp"
-        android:layout_height="94dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:onClick="stockViewSwitch"
-        android:text="@string/itemView_button"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/WelcomeText" />
-
-    <Button
-        android:id="@+id/AddItemButton"
-        android:layout_width="0dp"
-        android:layout_height="94dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:onClick="addItemSwitch"
-        android:text="@string/addItemView_button"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ItemViewButton" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
