--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -39,7 +39,7 @@
         android:textColorHint="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputUser" />
+        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />
 
     <TextView
         android:id="@+id/addItemText"
@@ -58,7 +58,7 @@
         tools:ignore="LabelFor" />
 
     <EditText
-        android:id="@+id/inputUser"
+        android:id="@+id/inputUsername"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
@@ -82,6 +82,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:onClick="createAccount"
         android:text="@string/itemCreateButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
