Created activity and supporting RecycleView adapter to select a specific inventory

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -48,7 +48,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/addItemMsg"
+        android:text="@string/createAcctMsg"
         android:textAlignment="center"
         android:textColor="?attr/colorOnBackground"
         android:textSize="34sp"
